--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=movements
+# --- CONFIGURACION DE LA BD ---
+server.port=8082
+spring.datasource.url=jdbc:mysql://localhost:3306/transfer_db
+spring.datasource.username=root
+spring.datasource.password=123Admin$
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# --- JPA / HIBERNATE ---
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
