--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,135 @@ build/
 
 ### VS Code ###
 .vscode/
+/htmlReport/img/arrowDown.gif
+/htmlReport/img/arrowUp.gif
+/htmlReport/css/coverage.css
+/htmlReport/js/highlight.min.js
+/htmlReport/js/highlightjs-line-numbers.min.js
+/htmlReport/css/idea.min.css
+/htmlReport/ns-1/index.html
+/htmlReport/ns-2/index.html
+/htmlReport/ns-3/index.html
+/htmlReport/ns-4/index.html
+/htmlReport/ns-5/index.html
+/htmlReport/ns-6/index.html
+/htmlReport/ns-7/index.html
+/htmlReport/ns-8/index.html
+/htmlReport/ns-9/index.html
+/htmlReport/ns-a/index.html
+/htmlReport/index.html
+/htmlReport/ns-1/index_SORT_BY_BLOCK.html
+/htmlReport/ns-2/index_SORT_BY_BLOCK.html
+/htmlReport/ns-3/index_SORT_BY_BLOCK.html
+/htmlReport/ns-4/index_SORT_BY_BLOCK.html
+/htmlReport/ns-5/index_SORT_BY_BLOCK.html
+/htmlReport/ns-6/index_SORT_BY_BLOCK.html
+/htmlReport/ns-7/index_SORT_BY_BLOCK.html
+/htmlReport/ns-8/index_SORT_BY_BLOCK.html
+/htmlReport/ns-9/index_SORT_BY_BLOCK.html
+/htmlReport/ns-a/index_SORT_BY_BLOCK.html
+/htmlReport/index_SORT_BY_BLOCK.html
+/htmlReport/ns-1/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-2/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-3/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-4/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-5/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-6/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-7/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-8/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-9/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-a/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/index_SORT_BY_BLOCK_DESC.html
+/htmlReport/ns-1/index_SORT_BY_CLASS.html
+/htmlReport/ns-2/index_SORT_BY_CLASS.html
+/htmlReport/ns-3/index_SORT_BY_CLASS.html
+/htmlReport/ns-4/index_SORT_BY_CLASS.html
+/htmlReport/ns-5/index_SORT_BY_CLASS.html
+/htmlReport/ns-6/index_SORT_BY_CLASS.html
+/htmlReport/ns-7/index_SORT_BY_CLASS.html
+/htmlReport/ns-8/index_SORT_BY_CLASS.html
+/htmlReport/ns-9/index_SORT_BY_CLASS.html
+/htmlReport/ns-a/index_SORT_BY_CLASS.html
+/htmlReport/index_SORT_BY_CLASS.html
+/htmlReport/ns-1/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-2/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-3/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-4/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-5/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-6/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-7/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-8/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-9/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-a/index_SORT_BY_CLASS_DESC.html
+/htmlReport/index_SORT_BY_CLASS_DESC.html
+/htmlReport/ns-1/index_SORT_BY_LINE.html
+/htmlReport/ns-2/index_SORT_BY_LINE.html
+/htmlReport/ns-3/index_SORT_BY_LINE.html
+/htmlReport/ns-4/index_SORT_BY_LINE.html
+/htmlReport/ns-5/index_SORT_BY_LINE.html
+/htmlReport/ns-6/index_SORT_BY_LINE.html
+/htmlReport/ns-7/index_SORT_BY_LINE.html
+/htmlReport/ns-8/index_SORT_BY_LINE.html
+/htmlReport/ns-9/index_SORT_BY_LINE.html
+/htmlReport/ns-a/index_SORT_BY_LINE.html
+/htmlReport/index_SORT_BY_LINE.html
+/htmlReport/ns-1/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-2/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-3/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-4/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-5/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-6/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-7/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-8/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-9/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-a/index_SORT_BY_LINE_DESC.html
+/htmlReport/index_SORT_BY_LINE_DESC.html
+/htmlReport/ns-1/index_SORT_BY_METHOD.html
+/htmlReport/ns-2/index_SORT_BY_METHOD.html
+/htmlReport/ns-3/index_SORT_BY_METHOD.html
+/htmlReport/ns-4/index_SORT_BY_METHOD.html
+/htmlReport/ns-5/index_SORT_BY_METHOD.html
+/htmlReport/ns-6/index_SORT_BY_METHOD.html
+/htmlReport/ns-7/index_SORT_BY_METHOD.html
+/htmlReport/ns-8/index_SORT_BY_METHOD.html
+/htmlReport/ns-9/index_SORT_BY_METHOD.html
+/htmlReport/ns-a/index_SORT_BY_METHOD.html
+/htmlReport/index_SORT_BY_METHOD.html
+/htmlReport/ns-1/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-2/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-3/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-4/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-5/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-6/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-7/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-8/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-9/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-a/index_SORT_BY_METHOD_DESC.html
+/htmlReport/index_SORT_BY_METHOD_DESC.html
+/htmlReport/ns-1/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-2/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-3/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-4/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-5/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-6/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-7/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-8/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-9/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-a/index_SORT_BY_NAME_DESC.html
+/htmlReport/index_SORT_BY_NAME_DESC.html
+/htmlReport/ns-1/sources/source-1.html
+/htmlReport/ns-2/sources/source-1.html
+/htmlReport/ns-3/sources/source-1.html
+/htmlReport/ns-4/sources/source-1.html
+/htmlReport/ns-5/sources/source-1.html
+/htmlReport/ns-6/sources/source-1.html
+/htmlReport/ns-7/sources/source-1.html
+/htmlReport/ns-8/sources/source-1.html
+/htmlReport/ns-9/sources/source-1.html
+/htmlReport/ns-a/sources/source-1.html
+/htmlReport/ns-5/sources/source-2.html
+/htmlReport/ns-8/sources/source-2.html
+/htmlReport/ns-9/sources/source-2.html
+/htmlReport/ns-a/sources/source-2.html
+/htmlReport/ns-5/sources/source-3.html
+/htmlReport/ns-5/sources/source-4.html
